app.log

> Task :compileJava FAILED
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:2: error: class, interface, enum, or record expected
if (token.isEmpty() || token.split("\.\").length != 3) {
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:2: error: illegal escape character
if (token.isEmpty() || token.split("\.\").length != 3) {
                                     ^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:2: error: unclosed string literal
if (token.isEmpty() || token.split("\.\").length != 3) {
                                   ^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:4: error: class, interface, enum, or record expected
    logger.warn("🔥 Invalid JWT token format: {}", logToken);
    ^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:5: error: class, interface, enum, or record expected
    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
    ^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:6: error: class, interface, enum, or record expected
    response.getWriter().write("{\"error\":\"Invalid token format\",\"message\":\"JWT token must have 3 parts separated by dots\"}");
    ^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:7: error: class, interface, enum, or record expected
    return;
    ^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:8: error: class, interface, enum, or record expected
}r.java
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:11: error: class, interface, enum, or record expected
import com.sigma.gym.entity.UserEntity;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:12: error: class, interface, enum, or record expected
import com.sigma.gym.repository.UserRepository;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:14: error: class, interface, enum, or record expected
import jakarta.servlet.FilterChain;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:15: error: class, interface, enum, or record expected
import jakarta.servlet.ServletException;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:16: error: class, interface, enum, or record expected
import jakarta.servlet.http.HttpServletRequest;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:17: error: class, interface, enum, or record expected
import jakarta.servlet.http.HttpServletResponse;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:18: error: class, interface, enum, or record expected
import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:19: error: class, interface, enum, or record expected
import org.springframework.security.core.context.SecurityContextHolder;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:20: error: class, interface, enum, or record expected
import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:21: error: class, interface, enum, or record expected
import org.springframework.stereotype.Component;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:22: error: class, interface, enum, or record expected
import org.springframework.web.filter.OncePerRequestFilter;
^
/Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:24: error: class, interface, enum, or record expected
import java.io.IOException;
^
20 errors

[Incubating] Problems report is available at: file:///Users/santiago/Proyectos/backend/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:2: error: illegal escape character
  if (token.isEmpty() || token.split("\.\").length != 3) {
                                       ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:2: error: class, interface, enum, or record expected
  if (token.isEmpty() || token.split("\.\").length != 3) {
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:4: error: class, interface, enum, or record expected
      logger.warn("🔥 Invalid JWT token format: {}", logToken);
      ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:5: error: class, interface, enum, or record expected
      response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
      ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:6: error: class, interface, enum, or record expected
      response.getWriter().write("{\"error\":\"Invalid token format\",\"message\":\"JWT token must have 3 parts separated by dots\"}");
      ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:7: error: class, interface, enum, or record expected
      return;
      ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:8: error: class, interface, enum, or record expected
  }r.java
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:11: error: class, interface, enum, or record expected
  import com.sigma.gym.entity.UserEntity;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:12: error: class, interface, enum, or record expected
  import com.sigma.gym.repository.UserRepository;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:14: error: class, interface, enum, or record expected
  import jakarta.servlet.FilterChain;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:15: error: class, interface, enum, or record expected
  import jakarta.servlet.ServletException;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:16: error: class, interface, enum, or record expected
  import jakarta.servlet.http.HttpServletRequest;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:17: error: class, interface, enum, or record expected
  import jakarta.servlet.http.HttpServletResponse;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:18: error: class, interface, enum, or record expected
  import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:19: error: class, interface, enum, or record expected
  import org.springframework.security.core.context.SecurityContextHolder;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:20: error: class, interface, enum, or record expected
  import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:21: error: class, interface, enum, or record expected
  import org.springframework.stereotype.Component;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:22: error: class, interface, enum, or record expected
  import org.springframework.web.filter.OncePerRequestFilter;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:24: error: class, interface, enum, or record expected
  import java.io.IOException;
  ^
  /Users/santiago/Proyectos/backend/src/main/java/com/sigma/gym/security/JwtAuthenticationFilter.java:2: error: unclosed string literal
  if (token.isEmpty() || token.split("\.\").length != 3) {
                                     ^
  20 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
